--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "axios": "^0.17.1",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
@@ -14,7 +15,7 @@
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
+    "react": "^16.6.3",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
