added finishing touches in styling

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
-    "sweetalert2": "^7.29.2"
+    "sweetalert2": "^7.29.2",
+    "typeface-eczar": "0.0.54",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "node server/server.js",
